--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
-	"name": "Abstraction",
-	"description": "A gulp based scaffold for building ghost themes",
-	"version": "1.0.0",
-	"repository": {
-		"type": "git",
-		"url": "http://github.com/whmii/Abstraction"
-	},
-	"devDependencies": {
-		"gulp": "^3.6.0",
-		"gulp-imagemin": "^0.2.0",
-		"gulp-jshint": "^1.5.3",
-		"gulp-autoprefixer": "0.0.7",
-		"gulp-notify": "^1.2.5",
-		"jshint-stylish": "^0.1.5"
-	}
+  "name": "Abstraction",
+  "description": "A gulp based scaffold for building ghost themes",
+  "version": "1.0.0",
+  "repository": {
+    "type": "git",
+    "url": "http://github.com/whmii/Abstraction"
+  },
+  "devDependencies": {
+    "gulp": "^3.6.0",
+    "gulp-sass": "~0.7.1",
+    "gulp-imagemin": "^0.2.0",
+    "gulp-jshint": "^1.5.3",
+    "gulp-autoprefixer": "0.0.7",
+    "gulp-notify": "^1.2.5",
+    "jshint-stylish": "^0.1.5"
+  }
 }
