fork the project for Bao-House

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Abstraction",
+  "name": "Bao-House",
   "description": "A gulp based scaffold for building ghost themes",
   "version": "0.1.0",
   "repository": {
